--- a/package.json
+++ b/package.json
@@ -73,9 +73,10 @@
     "cheerio": "^1.0.0-rc.12",
     "commander": "^13.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "lucide-react": "^0.477.0",
+    "mongodb": "^6.21.0",
     "mongoose": "^6.13.8",
     "next": "15.2.1",
     "nodemailer": "^7.0.3",
@@ -105,10 +106,10 @@
     "@types/serve-favicon": "^2.5.7",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "husky": "^8.0.0",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
-    "typescript": "^5.8.2",
-    "husky": "^8.0.0"
+    "typescript": "^5.8.2"
   },
   "engines": {
     "node": "18.x"
