--- a/.devcontainer/Makefile
+++ b/.devcontainer/Makefile
@@ -213,7 +213,7 @@ docker:
 	$(MAKE) docker-newsletter
 
 docker-compute:
-	@echo "→ Entering compute container shell…"
+	@echo "→ Entering compute container shell..."
 	./docker_computer.sh
 
 reboot: clean bootstrap dev
