--- a/newsletters/package.json
+++ b/newsletters/package.json
@@ -35,7 +35,7 @@
     "dotenv": "^16.5.0",
     "marked": "^15.0.11",
     "mongoose": "^8.15.0",
-    "next": "^15.3.2",
+    "next": "15.3.6",
     "nodemailer": "^7.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
